Fixed: Spacing between flex child elements are uneven

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -260,14 +260,14 @@ body, html {
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: center;
+  justify-content: space-between;
   margin-bottom: $margin;
 }
 .links__item {
   display: inline-flex;
   flex-direction: column;
   text-align: center;
-  flex: 1 1 30%;
+  flex: 1 1 auto;
   color: $primary-text-color;
   transition: 500ms all ease-in-out 100ms;
 }
